--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "prisma": "^5.9.0"
   },
   "dependencies": {
     "fastify": "^4.26.0",
